[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[workspace]
resolver = "2"

[dependencies]
actix-web = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tokio = { version = "1.36", features = ["full"] }
actix-files = "0.6"

[dependencies.wallet]
path = "../wallet"

[dependencies.transaction]
path = "../transaction"

[[bin]]
name = "blockchain"
path = "src/main.rs"